<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tvDactilar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

<!--
    <TextView
        android:id="@+id/tvTituloGestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/tvTituloGestion"
        android:textAlignment="center"
        android:textSize="24sp" />
       -->

    <TextView
        android:id="@+id/tvDactilar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#BB9BEF"
        android:text="@string/tvDactilar" />

    <TextView
        android:id="@+id/tvCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#BB9BEF"
        android:text="@string/tvCamera" />

    <TextView
        android:id="@+id/tvIws"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#BB9BEF"
        android:text="@string/tvIws" />

    <TextView
        android:id="@+id/tvRS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#BB9BEF"
        android:text="@string/tvRS" />




    <Button
        android:id="@+id/btnCheckPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/btnCheckPermission" />

    <Button
        android:id="@+id/btnRequestPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/btnRequestPermission" />


    <Button
        android:id="@+id/btnPermissionIS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnPermissionES" />

    <Button
        android:id="@+id/btnPermissionRS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnPermissionRS" />

    <Button
        android:id="@+id/btnGPS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGPS" />

    <TextView
        android:id="@+id/tvResponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvVersionAndroidLB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvVersionAndroidLB" />

    <TextView
        android:id="@+id/tvVersionAndroid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvVersionAndroid" />

    <TextView
        android:id="@+id/tvLigth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvLigth" />
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btnOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnOff" />

        <Button
            android:id="@+id/btnOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnOn" />
    </TableRow>



</LinearLayout>

    <!--
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvCamara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvCamera" />

    <TextView
        android:id="@+id/tvHuella"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvDactilar" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRequestPermission" />

    <Button
        android:id="@+id/btnHuella"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCheckPermission" />
</LinearLayout>
